--- a/nlp.html
+++ b/nlp.html
@@ -94,7 +94,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -130,7 +130,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
+<h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -176,7 +176,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -231,7 +231,7 @@ of the job details and apply today!</p>
 <p>4 days ago ... ... to deliver the right marketing message to the right audience at the right moment 
 and right place, underpinned by a multi-layered data-driven approach. Knorex?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1885683'>Job Application for Research Internship - Summer 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1885683'>Job Application for Research Internship - Summer 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -314,7 +314,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
-<h5><a href='http://olxbrasil.recruiterbox.com/jobs/fk033gc'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://olxbrasil.recruiterbox.com/jobs/fk033gc'>
     Cientista de Dados (NLP) at OLX Brasil
 </a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
@@ -328,7 +328,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rasa/jobs/4401998002'>Job Application for Solutions Engineer - NLP (m/f/x) at Rasa</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rasa/jobs/4401998002'>Job Application for Solutions Engineer - NLP (m/f/x) at Rasa</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -361,7 +361,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -373,7 +373,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundintern/jobs/4404748002'>Job Application for Machine Learning Scientist Intern - Natural Language Processing at SoundHound Inc. Internship</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundintern/jobs/4404748002'>Job Application for Machine Learning Scientist Intern - Natural Language Processing at SoundHound Inc. Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
@@ -443,11 +443,11 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
+<h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Some of the research projects can involve parsing, language modelling, machine 
 translation, sentiment analysis, recommendation systems, deep learning,?...</p>
@@ -458,7 +458,7 @@ translation, sentiment analysis, recommendation systems, deep learning,?...</p>
 GumGum enables highly impactful digital advertising campaigns with contextual
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -466,7 +466,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -495,7 +495,7 @@ India.</p>
 <p><span class="badge badge-light">Z?rich, Zurich, Switzerland</span></p>
 <p>Posted on: 2019-08-02</p>
 <hr/>
-<h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 22, 2019 ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
